Refactored ListSurveys API and added client agreement field to surveys
